// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getDeviceInfo should be able to get the default device info for the initial run 1`] = `
{
  "dpr": 100,
  "isExtraLargeIphone": false,
  "isLargeIphone": false,
  "isMediumIphone": false,
  "isPortrait": true,
  "isSmallIphone": false,
  "rectangles": {
    "androidNavigationBar": {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    },
    "iOSHomeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBar": {
      "bottom": 2000,
      "left": 0,
      "right": 1000,
      "top": 0,
    },
  },
  "screenSize": {
    "height": 20,
    "width": 10,
  },
  "screenshotHeight": 2000,
  "screenshotWidth": 1000,
}
`;

exports[`getDeviceInfo should be able to get the default device info for the second run 1`] = `
{
  "dpr": 100,
  "isExtraLargeIphone": false,
  "isLargeIphone": false,
  "isMediumIphone": false,
  "isPortrait": true,
  "isSmallIphone": false,
  "rectangles": {
    "androidNavigationBar": {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    },
    "iOSHomeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBar": {
      "bottom": 2000,
      "left": 0,
      "right": 1000,
      "top": 0,
    },
  },
  "screenSize": {
    "height": 20,
    "width": 10,
  },
  "screenshotHeight": 2000,
  "screenshotWidth": 1000,
}
`;

exports[`getDeviceInfo should be able to get the default device info for the second run 2`] = `
{
  "dpr": 100,
  "isExtraLargeIphone": false,
  "isLargeIphone": false,
  "isMediumIphone": false,
  "isPortrait": true,
  "isSmallIphone": false,
  "rectangles": {
    "androidNavigationBar": {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    },
    "iOSHomeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBar": {
      "bottom": 2000,
      "left": 0,
      "right": 1000,
      "top": 0,
    },
  },
  "screenSize": {
    "height": 20,
    "width": 10,
  },
  "screenshotHeight": 2000,
  "screenshotWidth": 1000,
}
`;

exports[`getDeviceInfo should be able to get the device info an Android phone 1`] = `
{
  "dpr": 2.75,
  "isExtraLargeIphone": false,
  "isLargeIphone": false,
  "isMediumIphone": false,
  "isPortrait": true,
  "isSmallIphone": false,
  "rectangles": {
    "androidNavigationBar": {
      "bottom": 2000,
      "left": 0,
      "right": 1000,
      "top": 1868,
    },
    "iOSHomeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBar": {
      "bottom": 66,
      "left": 0,
      "right": 1000,
      "top": 0,
    },
  },
  "screenSize": {
    "height": 2000,
    "width": 1000,
  },
  "screenshotHeight": 2000,
  "screenshotWidth": 1000,
}
`;

exports[`getDeviceInfo should be able to get the device info for a landscape phone 1`] = `
{
  "dpr": 1,
  "isExtraLargeIphone": false,
  "isLargeIphone": false,
  "isMediumIphone": false,
  "isPortrait": false,
  "isSmallIphone": false,
  "rectangles": {
    "androidNavigationBar": {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    },
    "iOSHomeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBar": {
      "bottom": 20,
      "left": 0,
      "right": 1000,
      "top": 0,
    },
  },
  "screenSize": {
    "height": 500,
    "width": 1000,
  },
  "screenshotHeight": 2000,
  "screenshotWidth": 1000,
}
`;

exports[`getDeviceInfo should be able to get the device info for an iPhone 12 1`] = `
{
  "dpr": 100,
  "isExtraLargeIphone": false,
  "isLargeIphone": false,
  "isMediumIphone": true,
  "isPortrait": true,
  "isSmallIphone": false,
  "rectangles": {
    "androidNavigationBar": {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    },
    "iOSHomeBar": {
      "bottom": 7,
      "left": 125,
      "right": 140,
      "top": 830,
    },
    "statusBar": {
      "bottom": 4400,
      "left": 0,
      "right": 1000,
      "top": 0,
    },
  },
  "screenSize": {
    "height": 20,
    "width": 10,
  },
  "screenshotHeight": 2000,
  "screenshotWidth": 1000,
}
`;

exports[`getDeviceInfo should be able to get the device info for an iPhone 12 Pro Max 1`] = `
{
  "dpr": 100,
  "isExtraLargeIphone": true,
  "isLargeIphone": false,
  "isMediumIphone": false,
  "isPortrait": true,
  "isSmallIphone": false,
  "rectangles": {
    "androidNavigationBar": {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    },
    "iOSHomeBar": {
      "bottom": 7,
      "left": 136,
      "right": 155,
      "top": 912,
    },
    "statusBar": {
      "bottom": 4400,
      "left": 0,
      "right": 1000,
      "top": 0,
    },
  },
  "screenSize": {
    "height": 20,
    "width": 10,
  },
  "screenshotHeight": 2000,
  "screenshotWidth": 1000,
}
`;

exports[`getDeviceInfo should be able to get the device info for an iPhone X 1`] = `
{
  "dpr": 100,
  "isExtraLargeIphone": false,
  "isLargeIphone": false,
  "isMediumIphone": false,
  "isPortrait": true,
  "isSmallIphone": true,
  "rectangles": {
    "androidNavigationBar": {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    },
    "iOSHomeBar": {
      "bottom": 6,
      "left": 120,
      "right": 135,
      "top": 799,
    },
    "statusBar": {
      "bottom": 4400,
      "left": 0,
      "right": 1000,
      "top": 0,
    },
  },
  "screenSize": {
    "height": 20,
    "width": 10,
  },
  "screenshotHeight": 2000,
  "screenshotWidth": 1000,
}
`;

exports[`getDeviceInfo should be able to get the device info for an iPhone X Large 1`] = `
{
  "dpr": 100,
  "isExtraLargeIphone": false,
  "isLargeIphone": true,
  "isMediumIphone": false,
  "isPortrait": true,
  "isSmallIphone": false,
  "rectangles": {
    "androidNavigationBar": {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    },
    "iOSHomeBar": {
      "bottom": 6,
      "left": 133,
      "right": 148,
      "top": 883,
    },
    "statusBar": {
      "bottom": 4400,
      "left": 0,
      "right": 1000,
      "top": 0,
    },
  },
  "screenSize": {
    "height": 20,
    "width": 10,
  },
  "screenshotHeight": 2000,
  "screenshotWidth": 1000,
}
`;
